--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
-    "express": "^4.18.2",
-    "mongoose": "^6.8.4",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.31.3"
+    "express": "^4.18.2"
   }
 }
